@@ -1,3 +1,7 @@
+2014-07-16  Yu-Jie Lin  <livibetter@gmail.com>
+
+* bubbles.c: fix warnings reported with -Wall -Wextra
+
 2014-07-07  Yu-Jie Lin  <livibetter@gmail.com>
 
 * bubbles.c (main): add -d option for update interval
